# bevydot

./: .gitignore  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: README.md  sample.dot  software_architecture.dot
examples/dot/: hierarchy.dot  hybrid_architecture.dot  network_topology.dot  project_dependencies.dot  simple_graph.dot  team_collaboration.dot
examples/plantuml/: login_sequence.puml  microservice_flow.puml  system_interaction.puml
src/: camera.rs  events.rs  graph_state.rs  lib.rs  main.rs  parser.rs  search.rs  types.rs  ui.rs  visualization.rs
src/sources/: dot.rs  mod.rs  plantuml.rs
