[package]
name = "bevydot"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "3D visualization of Graphviz dot files using Bevy"
repository = "https://github.com/navicore/bevydot"
readme = "README.md"
keywords = ["graphviz", "dot", "visualization", "3d", "bevy"]
categories = ["visualization", "graphics"]

[dependencies]
bevy = "0.16"
dot-parser = "0.5"
petgraph = "0.8"
clap = { version = "4.5", features = ["derive"] }
