[package]
name = "dotspace"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "Explore your Graphviz dot files in interactive 3D space"
repository = "https://github.com/navicore/dotspace"
readme = "README.md"
keywords = ["graphviz", "dot", "visualization", "3d", "interactive"]
categories = ["visualization", "graphics"]

[dependencies]
bevy = "0.16"
dot-parser = "0.5"
petgraph = "0.8"
clap = { version = "4.5", features = ["derive"] }
